# OpenSentry-Command

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  CUsersSbussAppDataLocalTempflylogs.txt  Dockerfile  LICENSE  README.md  SECURITY.md  auth.py  camera_registry.py  camera_stream.py  docker-compose.yml  docker-entrypoint.sh  fly.toml  mdns_discovery.py  mqtt_client.py  pyproject.toml  run.py  server.py  setup.sh  teardown.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: close-external-prs.yml  deploy.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: audit.py  cameras.py  gdpr.py  hls.py  incidents.py  install.py  mcp_activity.py  mcp_keys.py  motion.py  nodes.py  notifications.py  sentinel.py  streams.py  webhooks.py  webhooks_outbound.py  well_known.py  ws.py
backend/app/core/: audit.py  auth.py  clerk.py  codec.py  config.py  csv_export.py  database.py  email.py  email_templates.py  email_unsubscribe.py  email_worker.py  errors.py  gdpr.py  health_probes.py  limiter.py  logging_setup.py  migrations.py  plans.py  recipients.py  release_cache.py  request_context.py  sentinel_dispatch.py  sentry.py  versions.py
backend/app/mcp/: activity.py  server.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  codec_prober.py  storage.py
backend/app/templates/emails/: _layout.html.j2  camera_offline.body.html.j2  camera_offline.body.txt.j2  camera_offline.subject.txt.j2  camera_online.body.html.j2  camera_online.body.txt.j2  camera_online.subject.txt.j2  cloudnode_disk_low.body.html.j2  cloudnode_disk_low.body.txt.j2  cloudnode_disk_low.subject.txt.j2  disk_critical.body.html.j2  disk_critical.body.txt.j2  disk_critical.subject.txt.j2  incident_created.body.html.j2  incident_created.body.txt.j2  incident_created.subject.txt.j2  mcp_key_created.body.html.j2  mcp_key_created.body.txt.j2  mcp_key_created.subject.txt.j2  mcp_key_revoked.body.html.j2  mcp_key_revoked.body.txt.j2  mcp_key_revoked.subject.txt.j2  member_added.body.html.j2  member_added.body.txt.j2  member_added.subject.txt.j2  member_promotion_requested.body.html.j2  member_promotion_requested.body.txt.j2  member_promotion_requested.subject.txt.j2  member_removed.body.html.j2  member_removed.body.txt.j2  member_removed.subject.txt.j2  member_role_changed.body.html.j2  member_role_changed.body.txt.j2  member_role_changed.subject.txt.j2  motion.body.html.j2  motion.body.txt.j2  motion.subject.txt.j2  motion_digest.body.html.j2  motion_digest.body.txt.j2  motion_digest.subject.txt.j2  (+9 more)
backend/scripts/: install.ps1  install.sh  mcp-setup.ps1  mcp-setup.sh
backend/static/: index.html
backend/static/assets/: AdminPage-BqGLdP1q.js  AdminPage-BqPGLu97.js  AdminPage-CO4rrydU.js  AdminPage-Ckpe-dUu.js  AdminPage-D5xtZGQz.js  AdminPage-l3eydDWM.js  DashboardPage-B-0SHr06.js  DashboardPage-B5jOC6nZ.js  DashboardPage-BxMIF-yV.js  DashboardPage-DL_c4GDR.js  DashboardPage-DUHao9rS.js  DashboardPage-DWYZVLmw.js  DocsPage-BVomKLk9.js  DocsPage-CgcKzkdY.js  DocsPage-D4TJ0r9m.js  DocsPage-DZmxWZl0.js  DocsPage-Dt0zHNYN.js  DocsPage-DuIWymYM.js  DocsPage-UBy5WcAw.js  HlsPlayer-2o-UZYQl.js  HlsPlayer-D9vXxcwe.js  HlsPlayer-DseiqEbA.js  HlsPlayer-Dz42SUBj.js  HlsPlayer-ZFJGREyU.js  IncidentsPage-C7_qcPqB.js  LandingPage-BCa7iHlA.js  LandingPage-CF-Y58sd.js  LandingPage-GMoXhUXC.js  LandingPage-US-PEu2R.js  LandingPage-WUuK83hF.js  LegalPage-CdfHR1To.js  LegalPage-Cqm0CUtU.js  LegalPage-DT3kj8Yo.js  McpPage-B3NFaENi.js  McpPage-BTD0kOkk.js  McpPage-Bj0_EaUk.js  McpPage-Bz0uy8kJ.js  McpPage-Cbho73qd.js  McpPage-Cteeyj1C.js  McpPage-DerMV7LY.js  (+65 more)
backend/tests/: conftest.py  test_audit_log_endpoint.py  test_billing.py  test_cameras.py  test_codec.py  test_csv_export.py  test_disk_check.py  test_email.py  test_email_templates.py  test_email_unsubscribe.py  test_email_worker.py  test_errors.py  test_gdpr.py  test_health.py  test_hls.py  test_log_cleanup.py  test_log_cleanup_union.py  test_mcp_keys.py  test_member_promotion_request.py  test_migrations.py  test_motion.py  test_motion_digest_loop.py  test_motion_email_cooldown.py  test_motion_handler.py  test_nodes.py  test_notifications.py  test_plans.py  test_rate_limits.py  test_recipients.py  test_release_cache.py  test_request_context.py  test_resend_webhook.py  test_security.py  test_security_txt.py  test_sentry.py  test_versions.py  test_webhooks.py  test_welcome_email.py
docs/: LAUNCH_HANDOFF.md  README.md
docs/adr/: 0002-viewer-hour-billing.md
docs/image-specs/: config-precedence-diagram.json  dashboard-ia-diagram.json  docs-hero.json  hls-pipeline-diagram.json  incident-lifecycle-diagram.json  landing-hero.json  logo-concepts.json  mcp-workflow-diagram.json  motion-fsm-diagram.json  notifications-fanout-diagram.json  og-card.json  privacy-visual.json  security-hero.json  security-model-diagram.json  sentinel-hero.json  setup-wizard-diagram.json  system-architecture-diagram.json
docs/legal/: DPA.md  SUB_PROCESSORS.md
docs/runbooks/: ON_CALL.md
frontend/: .env.example  .env.production  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AddNodeModal.jsx  AdminCharts.jsx  AdminKpiStrip.jsx  AdminTabs.jsx  AppSidebar.jsx  CameraCard.jsx  CameraGridPreview.jsx  CameraRecordingControls.jsx  DocsDiagrams.jsx  EmptyState.jsx  ErrorBoundary.jsx  (+20 more)
frontend/tests/: sanity.test.js  setup.js
opensentry_command/: __init__.py  config.py  security.py
opensentry_command/auth/: __init__.py  handlers.py
opensentry_command/models/: __init__.py  camera.py  database.py
opensentry_command/routes/: __init__.py  api.py  main.py
opensentry_command/services/: __init__.py  camera.py  discovery.py  mqtt.py
opensentry_command/templates/: index.html  login.html  media.html  settings.html  users.html
static/js/: main.js.backup
templates/: index.html  login.html
(+52 files in other folders)
