[project]
name = "opensentry-command"
version = "0.2.0"
description = "OpenSentry Command Center - Security Camera Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "opencv-python>=4.12.0.88",
    "paho-mqtt>=2.1.0",
    "zeroconf>=0.148.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
]
