[project]
name = "opensentry-backend"
version = "2.1.0"
description = "OpenSentry Command Center Backend - FastAPI with Clerk Auth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.48",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyjwt>=2.12.1",
    "httpx>=0.27.0",
    "svix>=1.89.0",
    "clerk-backend-api>=5.0.6",
    "slowapi>=0.1.9",
    "websockets>=12.0",
    "fastmcp>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]