[project]
name = "opensentry-backend"
version = "2.1.0"
description = "SourceBox Sentry Command Center Backend - FastAPI with Clerk Auth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.48",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Pinned >=0.0.26 for CVE-2026-40347 — DoS via crafted multipart
    # preamble/epilogue processing.  Dependabot moderate advisory #5.
    "python-multipart>=0.0.26",
    "pyjwt>=2.12.1",
    "httpx>=0.27.0",
    "svix>=1.89.0",
    "clerk-backend-api>=5.0.6",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "websockets>=12.0",
    "fastmcp>=3.0.0",
    "sentry-sdk[fastapi]>=2.14.0",
    # IANA timezone database for Python's stdlib `zoneinfo`.
    # Required on Windows (where the OS doesn't ship the database) and
    # on slim Linux containers (alpine + python:slim) where /usr/share/
    # zoneinfo isn't included.  No-op overhead on systems that already
    # have the database.  Used by the heartbeat handler's per-camera
    # scheduled-recording check to interpret HH:MM in the org's tz.
    "tzdata>=2024.1",
    # Resend transactional email SDK.  Used for operator-critical
    # notifications (camera offline, node offline, disk critical, new
    # incident).  Free tier covers ~100 active orgs at v1 event scope;
    # we flip to Pro the same week motion-event emails ship.  Worker
    # pattern + EmailOutbox table in models.py decouple sends from
    # request handlers — see app/core/email_worker.py.
    "resend>=2.0.0",
    # Jinja2 for email templates (subject + body.txt + body.html per
    # event kind, sharing _layout.html.j2).  FastAPI vendors a copy
    # for Jinja2Templates but we depend on it directly so the email
    # path doesn't break if FastAPI ever drops the optional dep.
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
# Transitive constraints — pin versions forced up from what the
# ecosystem currently resolves, without adding them as top-level deps.
#
# authlib: GHSA-jj8c-mmj3-mmgv (CSRF in OAuth client state caching,
# CVSS 5.4).  Pulled in by fastmcp; we don't use authlib's OAuth
# client so the vulnerable path isn't reachable, but clearing the
# Dependabot alert is cheaper than arguing about it.  Remove this
# line once fastmcp's own pin moves past 1.6.11.
constraint-dependencies = [
    "authlib>=1.6.11",
]